public variables (github)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=@profileActive@
+spring.profiles.active=github
 
 #liquibase
 liquibase.change-log=classpath:db-changelog.xml
