--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk8
 
 after_success:
- -  bash <(curl -s htttps:codecov.io/bash)
+ - bash <(curl -s https://codecov.io/bash)
 
 notifications:
   email:
